<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_sales"
            android:textColor="#FF8C00"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp"/>

        <ImageView
            android:id="@+id/bannerImage"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            app:layout_constraintTop_toBottomOf="@id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/bannerImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/add_image" />

                <Button
                    android:id="@+id/btnadd"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_products"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingVertical="6dp"
                    android:backgroundTint="#FF8C00"
                    app:cornerRadius="10dp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card 2 - View -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/view_image" />

                <Button
                    android:id="@+id/btnview"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/view_products"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:paddingVertical="6dp"
                    android:backgroundTint="#FF8C00"
                    app:cornerRadius="10dp"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:layout_constraintTop_toBottomOf="@id/card2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/delete_image" />

                <Button
                    android:id="@+id/btnupdate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/update_and_delete_products"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp"
                    android:paddingVertical="6dp"
                    android:backgroundTint="#FF8C00"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
